# Emotion-detection-transfer-learning

./: .gitignore  ModelTraining Pytorch.ipynb  README.md  main.py  pyproject.toml
docs/: Link To pytorch dec.txt
notebooks/Live_Testing_OpenCV/: ModelTestingLive OpenCV.ipynb
notebooks/Model_NoteBooks/: ModelTesting Confusion Matrix.ipynb  ModelTesting Pytorch.ipynb  ModelTraining Pytorch.ipynb
src/data/: Readme.txt
src/models/: TraingModelCode.py
