[project]
name = "emotion-detection-transfer-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py",
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "altair",
    "annotated-types",
    "anyio",
    "asttokens",
    "astunparse",
    "attrs",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "comm",
    "contourpy",
    "cycler",
    "datasets",
    "debugpy",
    "decorator",
    "dill",
    "executing",
    "fastapi",
    "ffmpy",
    "filelock",
    "Flask",
    "flatbuffers",
    "fonttools",
    "frozenlist",
    "fsspec",
    "gast",
    "gitdb",
    "GitPython",
    "google-pasta",
    "gradio",
    "gradio_client",
    "groovy",
    "grpcio",
    "h11",
    "h5py",
    "httpcore",
    "httpx",
    "huggingface-hub",
    "idna",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "itsdangerous",
    "jedi",
    "Jinja2",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter_client",
    "jupyter_core",
    "keras",
    "kiwisolver",
    "libclang",
    "Markdown",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "matplotlib-inline",
    "mdurl",
    "ml-dtypes",
    "mpmath",
    "multidict",
    "multiprocess",
    "namex",
    "narwhals",
    "nest-asyncio",
    "networkx",
    "numpy",
    "opencv-python",
    "opt_einsum",
    "optree",
    "orjson",
    "packaging",
    "pandas",
    "parso",
    "pillow",
    "platformdirs",
    "prompt_toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "pure_eval",
    "pyarrow",
    "pydantic",
    "pydantic_core",
    "pydeck",
    "pydub",
    "Pygments",
    "pyparsing",
    "python-dateutil",
    "python-multipart",
    "pytz",
    "pywin32",
    "PyYAML",
    "pyzmq",
    "referencing",
    "regex",
    "requests",
    "rich",
    "rpds-py",
    "ruff",
    "safehttpx",
    "safetensors",
    "scikit-learn",
    "scipy",
    "semantic-version",
    "setuptools",
    "shellingham",
    "six",
    "smmap",
    "sniffio",
    "stack-data",
    "starlette",
    "streamlit",
    "sympy",
    "tenacity",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow",
    "tensorflow-intel",
    "termcolor",
    "threadpoolctl",
    "tokenizers",
    "toml",
    "tomlkit",
    "torch",
    "torchvision",
    "tornado",
    "tqdm",
    "traitlets",
    "transformers",
    "typer",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "uvicorn",
    "watchdog",
    "wcwidth",
    "websockets",
    "Werkzeug",
    "wheel",
    "wrapt",
    "xxhash",
    "yarl",
]

[tool.uv.sources]
fastapi = { path = "../Wheels/wheels/fastapi-0.115.13-py3-none-any.whl" }
filelock = { path = "../Wheels/wheels/filelock-3.13.1-py3-none-any.whl" }
